--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- Modal content -->
             <div class="modal-content">
             <span class="close">&times;</span>
-            <p>These location are keep you safe and help you stay clear of danger. Heading towards Avengers can put yourself and them in danger.</p>
+            <p>These locations are to keep you safe and help you stay clear of danger. Heading towards Avengers can put yourself and them in danger.</p>
             </div>
         
         </div>
